--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="select_images">选择图片</string>
     <string name="gif_make">GIF制作</string>
 
-<!--image-selector-->
+    <!--image-selector-->
     <string name="folder_all">所有图片</string>
     <string name="preview">Preview</string>
     <string name="msg_no_camera">No system camera found</string>
@@ -31,4 +31,8 @@
     <string name="action_done">Done</string>
     <string name="photo_unit">Shot</string>
     <string name="tip_take_photo">Take photo</string>
+    <string name="setting">设置</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
