add module strength

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">LiLiNote</string>
+    <string name="app_name">Strength</string>
     <string name="change_theme_key">change_theme</string>
 
     <!--图片选择器-->
